fix(docs): Make demo-browser content overflow if necessary

--- a/projects/ngqp-demo/src/app/shared/demo-browser/demo-browser.component.scss
+++ b/projects/ngqp-demo/src/app/shared/demo-browser/demo-browser.component.scss
@@ -86,6 +86,8 @@ $panel-content-height: 27px;
 
         // border-left: 1px solid $panel-accent;
         // border-right: 1px solid $panel-accent;
+
+        overflow: auto;
     }
 
     &__console {
